added scoring rules

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Memory Game!</h1>
+    <h2>Scoring: -1 points for an incorrect guess, +2 points for a match</h2>
     <button>Restart</button>
     <div>Score:</div>
     <div id="score">0</div>
